bk_ida/gccida/g1/cpp_finish_options
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cpp_finish_options/src/cppinit.c:1469:27: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void  cpp_finish_options( cpp_reader_0 *pfile) 
                          ^~~~~~~~~~~~
                          cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cpp_finish_options/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cpp_finish_options/src/cppinit.c:1474:1: error: unknown type name 'cpp_hashnode_0'; did you mean 'cpp_hashnode'?
cpp_hashnode_0 *v5; // rax 
^~~~~~~~~~~~~~
cpp_hashnode
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cpp_finish_options/src/cpplib.h:42:29: note: 'cpp_hashnode' declared here
typedef struct cpp_hashnode cpp_hashnode;
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cpp_finish_options/src/cppinit.c:1489:43: error: use of undeclared identifier 'unk_64D130'
while ( v4 != ( const  struct named_op *)&unk_64D130 ); 
                                          ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cpp_finish_options/src/obj/cppinit.o] Error 1
